Mejora de Código - Agregado de métodos